analisador/parte4/sintatico.output
Gramática

    0 $accept: programa $end

    1 $@1: ε

    2 $@2: ε

    3 programa: cabecalho $@1 variaveis $@2 T_INICIO lista_comandos T_FIM

    4 cabecalho: T_PROGRAMA T_IDENTIF

    5 variaveis: ε
    6          | declaracao_variaveis

    7 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis
    8                     | tipo lista_variaveis

    9 tipo: T_LOGICO
   10     | T_INTEIRO

   11 lista_variaveis: lista_variaveis T_IDENTIF
   12                | T_IDENTIF

   13 lista_comandos: ε
   14               | comando lista_comandos

   15 comando: leitura
   16        | escrita
   17        | repeticao
   18        | selecao
   19        | atribuicao

   20 leitura: T_LEIA T_IDENTIF

   21 escrita: T_ESCREVA expressao

   22 $@3: ε

   23 $@4: ε

   24 repeticao: T_ENQTO $@3 expressao T_FACA $@4 lista_comandos T_FIMENQTO

   25 $@5: ε

   26 $@6: ε

   27 selecao: T_SE expressao T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE

   28 $@7: ε

   29 atribuicao: T_IDENTIF $@7 T_ATRIB expressao

   30 expressao: expressao T_VEZES expressao
   31          | expressao T_DIV expressao
   32          | expressao T_MAIS expressao
   33          | expressao T_MENOS expressao
   34          | expressao T_MAIOR expressao
   35          | expressao T_MENOR expressao
   36          | expressao T_IGUAL expressao
   37          | expressao T_E expressao
   38          | expressao T_OU expressao
   39          | termo

   40 termo: T_IDENTIF
   41      | T_NUMERO
   42      | T_V
   43      | T_F
   44      | T_NAO termo
   45      | T_ABRE expressao T_FECHA


Terminais, com as regras onde eles aparecem

    $end (0) 0
    error (256)
    T_PROGRAMA (258) 4
    T_INICIO (259) 3
    T_FIM (260) 3
    T_IDENTIF (261) 4 11 12 20 29 40
    T_LEIA (262) 20
    T_ESCREVA (263) 21
    T_ENQTO (264) 24
    T_FACA (265) 24
    T_FIMENQTO (266) 24
    T_SE (267) 27
    T_ENTAO (268) 27
    T_SENAO (269) 27
    T_FIMSE (270) 27
    T_ATRIB (271) 29
    T_VEZES (272) 30
    T_DIV (273) 31
    T_MAIS (274) 32
    T_MENOS (275) 33
    T_MAIOR (276) 34
    T_MENOR (277) 35
    T_IGUAL (278) 36
    T_E (279) 37
    T_OU (280) 38
    T_V (281) 42
    T_F (282) 43
    T_NUMERO (283) 41
    T_NAO (284) 44
    T_ABRE (285) 45
    T_FECHA (286) 45
    T_LOGICO (287) 9
    T_INTEIRO (288) 10


Não terminais com as regras onde eles aparecem

    $accept (34)
        à esquerda: 0
    programa (35)
        à esquerda: 3
        à direita: 0
    $@1 (36)
        à esquerda: 1
        à direita: 3
    $@2 (37)
        à esquerda: 2
        à direita: 3
    cabecalho (38)
        à esquerda: 4
        à direita: 3
    variaveis (39)
        à esquerda: 5 6
        à direita: 3
    declaracao_variaveis (40)
        à esquerda: 7 8
        à direita: 6 7
    tipo (41)
        à esquerda: 9 10
        à direita: 7 8
    lista_variaveis (42)
        à esquerda: 11 12
        à direita: 7 8 11
    lista_comandos (43)
        à esquerda: 13 14
        à direita: 3 14 24 27
    comando (44)
        à esquerda: 15 16 17 18 19
        à direita: 14
    leitura (45)
        à esquerda: 20
        à direita: 15
    escrita (46)
        à esquerda: 21
        à direita: 16
    repeticao (47)
        à esquerda: 24
        à direita: 17
    $@3 (48)
        à esquerda: 22
        à direita: 24
    $@4 (49)
        à esquerda: 23
        à direita: 24
    selecao (50)
        à esquerda: 27
        à direita: 18
    $@5 (51)
        à esquerda: 25
        à direita: 27
    $@6 (52)
        à esquerda: 26
        à direita: 27
    atribuicao (53)
        à esquerda: 29
        à direita: 19
    $@7 (54)
        à esquerda: 28
        à direita: 29
    expressao (55)
        à esquerda: 30 31 32 33 34 35 36 37 38 39
        à direita: 21 24 27 29 30 31 32 33 34 35 36 37 38 45
    termo (56)
        à esquerda: 40 41 42 43 44 45
        à direita: 39 44


Estado 0

    0 $accept: • programa $end

    T_PROGRAMA  deslocar, e ir ao estado 1

    programa   ir ao estado 2
    cabecalho  ir ao estado 3


Estado 1

    4 cabecalho: T_PROGRAMA • T_IDENTIF

    T_IDENTIF  deslocar, e ir ao estado 4


Estado 2

    0 $accept: programa • $end

    $end  deslocar, e ir ao estado 5


Estado 3

    3 programa: cabecalho • $@1 variaveis $@2 T_INICIO lista_comandos T_FIM

    $padrão  reduzir usando a regra 1 ($@1)

    $@1  ir ao estado 6


Estado 4

    4 cabecalho: T_PROGRAMA T_IDENTIF •

    $padrão  reduzir usando a regra 4 (cabecalho)


Estado 5

    0 $accept: programa $end •

    $padrão  aceitar


Estado 6

    3 programa: cabecalho $@1 • variaveis $@2 T_INICIO lista_comandos T_FIM

    T_LOGICO   deslocar, e ir ao estado 7
    T_INTEIRO  deslocar, e ir ao estado 8

    $padrão  reduzir usando a regra 5 (variaveis)

    variaveis             ir ao estado 9
    declaracao_variaveis  ir ao estado 10
    tipo                  ir ao estado 11


Estado 7

    9 tipo: T_LOGICO •

    $padrão  reduzir usando a regra 9 (tipo)


Estado 8

   10 tipo: T_INTEIRO •

    $padrão  reduzir usando a regra 10 (tipo)


Estado 9

    3 programa: cabecalho $@1 variaveis • $@2 T_INICIO lista_comandos T_FIM

    $padrão  reduzir usando a regra 2 ($@2)

    $@2  ir ao estado 12


Estado 10

    6 variaveis: declaracao_variaveis •

    $padrão  reduzir usando a regra 6 (variaveis)


Estado 11

    7 declaracao_variaveis: tipo • lista_variaveis declaracao_variaveis
    8                     | tipo • lista_variaveis

    T_IDENTIF  deslocar, e ir ao estado 13

    lista_variaveis  ir ao estado 14


Estado 12

    3 programa: cabecalho $@1 variaveis $@2 • T_INICIO lista_comandos T_FIM

    T_INICIO  deslocar, e ir ao estado 15


Estado 13

   12 lista_variaveis: T_IDENTIF •

    $padrão  reduzir usando a regra 12 (lista_variaveis)


Estado 14

    7 declaracao_variaveis: tipo lista_variaveis • declaracao_variaveis
    8                     | tipo lista_variaveis •
   11 lista_variaveis: lista_variaveis • T_IDENTIF

    T_IDENTIF  deslocar, e ir ao estado 16
    T_LOGICO   deslocar, e ir ao estado 7
    T_INTEIRO  deslocar, e ir ao estado 8

    $padrão  reduzir usando a regra 8 (declaracao_variaveis)

    declaracao_variaveis  ir ao estado 17
    tipo                  ir ao estado 11


Estado 15

    3 programa: cabecalho $@1 variaveis $@2 T_INICIO • lista_comandos T_FIM

    T_IDENTIF  deslocar, e ir ao estado 18
    T_LEIA     deslocar, e ir ao estado 19
    T_ESCREVA  deslocar, e ir ao estado 20
    T_ENQTO    deslocar, e ir ao estado 21
    T_SE       deslocar, e ir ao estado 22

    $padrão  reduzir usando a regra 13 (lista_comandos)

    lista_comandos  ir ao estado 23
    comando         ir ao estado 24
    leitura         ir ao estado 25
    escrita         ir ao estado 26
    repeticao       ir ao estado 27
    selecao         ir ao estado 28
    atribuicao      ir ao estado 29


Estado 16

   11 lista_variaveis: lista_variaveis T_IDENTIF •

    $padrão  reduzir usando a regra 11 (lista_variaveis)


Estado 17

    7 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis •

    $padrão  reduzir usando a regra 7 (declaracao_variaveis)


Estado 18

   29 atribuicao: T_IDENTIF • $@7 T_ATRIB expressao

    $padrão  reduzir usando a regra 28 ($@7)

    $@7  ir ao estado 30


Estado 19

   20 leitura: T_LEIA • T_IDENTIF

    T_IDENTIF  deslocar, e ir ao estado 31


Estado 20

   21 escrita: T_ESCREVA • expressao

    T_IDENTIF  deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 33
    T_F        deslocar, e ir ao estado 34
    T_NUMERO   deslocar, e ir ao estado 35
    T_NAO      deslocar, e ir ao estado 36
    T_ABRE     deslocar, e ir ao estado 37

    expressao  ir ao estado 38
    termo      ir ao estado 39


Estado 21

   24 repeticao: T_ENQTO • $@3 expressao T_FACA $@4 lista_comandos T_FIMENQTO

    $padrão  reduzir usando a regra 22 ($@3)

    $@3  ir ao estado 40


Estado 22

   27 selecao: T_SE • expressao T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE

    T_IDENTIF  deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 33
    T_F        deslocar, e ir ao estado 34
    T_NUMERO   deslocar, e ir ao estado 35
    T_NAO      deslocar, e ir ao estado 36
    T_ABRE     deslocar, e ir ao estado 37

    expressao  ir ao estado 41
    termo      ir ao estado 39


Estado 23

    3 programa: cabecalho $@1 variaveis $@2 T_INICIO lista_comandos • T_FIM

    T_FIM  deslocar, e ir ao estado 42


Estado 24

   14 lista_comandos: comando • lista_comandos

    T_IDENTIF  deslocar, e ir ao estado 18
    T_LEIA     deslocar, e ir ao estado 19
    T_ESCREVA  deslocar, e ir ao estado 20
    T_ENQTO    deslocar, e ir ao estado 21
    T_SE       deslocar, e ir ao estado 22

    $padrão  reduzir usando a regra 13 (lista_comandos)

    lista_comandos  ir ao estado 43
    comando         ir ao estado 24
    leitura         ir ao estado 25
    escrita         ir ao estado 26
    repeticao       ir ao estado 27
    selecao         ir ao estado 28
    atribuicao      ir ao estado 29


Estado 25

   15 comando: leitura •

    $padrão  reduzir usando a regra 15 (comando)


Estado 26

   16 comando: escrita •

    $padrão  reduzir usando a regra 16 (comando)


Estado 27

   17 comando: repeticao •

    $padrão  reduzir usando a regra 17 (comando)


Estado 28

   18 comando: selecao •

    $padrão  reduzir usando a regra 18 (comando)


Estado 29

   19 comando: atribuicao •

    $padrão  reduzir usando a regra 19 (comando)


Estado 30

   29 atribuicao: T_IDENTIF $@7 • T_ATRIB expressao

    T_ATRIB  deslocar, e ir ao estado 44


Estado 31

   20 leitura: T_LEIA T_IDENTIF •

    $padrão  reduzir usando a regra 20 (leitura)


Estado 32

   40 termo: T_IDENTIF •

    $padrão  reduzir usando a regra 40 (termo)


Estado 33

   42 termo: T_V •

    $padrão  reduzir usando a regra 42 (termo)


Estado 34

   43 termo: T_F •

    $padrão  reduzir usando a regra 43 (termo)


Estado 35

   41 termo: T_NUMERO •

    $padrão  reduzir usando a regra 41 (termo)


Estado 36

   44 termo: T_NAO • termo

    T_IDENTIF  deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 33
    T_F        deslocar, e ir ao estado 34
    T_NUMERO   deslocar, e ir ao estado 35
    T_NAO      deslocar, e ir ao estado 36
    T_ABRE     deslocar, e ir ao estado 37

    termo  ir ao estado 45


Estado 37

   45 termo: T_ABRE • expressao T_FECHA

    T_IDENTIF  deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 33
    T_F        deslocar, e ir ao estado 34
    T_NUMERO   deslocar, e ir ao estado 35
    T_NAO      deslocar, e ir ao estado 36
    T_ABRE     deslocar, e ir ao estado 37

    expressao  ir ao estado 46
    termo      ir ao estado 39


Estado 38

   21 escrita: T_ESCREVA expressao •
   30 expressao: expressao • T_VEZES expressao
   31          | expressao • T_DIV expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MENOS expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao

    T_VEZES  deslocar, e ir ao estado 47
    T_DIV    deslocar, e ir ao estado 48
    T_MAIS   deslocar, e ir ao estado 49
    T_MENOS  deslocar, e ir ao estado 50
    T_MAIOR  deslocar, e ir ao estado 51
    T_MENOR  deslocar, e ir ao estado 52
    T_IGUAL  deslocar, e ir ao estado 53
    T_E      deslocar, e ir ao estado 54
    T_OU     deslocar, e ir ao estado 55

    $padrão  reduzir usando a regra 21 (escrita)


Estado 39

   39 expressao: termo •

    $padrão  reduzir usando a regra 39 (expressao)


Estado 40

   24 repeticao: T_ENQTO $@3 • expressao T_FACA $@4 lista_comandos T_FIMENQTO

    T_IDENTIF  deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 33
    T_F        deslocar, e ir ao estado 34
    T_NUMERO   deslocar, e ir ao estado 35
    T_NAO      deslocar, e ir ao estado 36
    T_ABRE     deslocar, e ir ao estado 37

    expressao  ir ao estado 56
    termo      ir ao estado 39


Estado 41

   27 selecao: T_SE expressao • T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE
   30 expressao: expressao • T_VEZES expressao
   31          | expressao • T_DIV expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MENOS expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao

    T_ENTAO  deslocar, e ir ao estado 57
    T_VEZES  deslocar, e ir ao estado 47
    T_DIV    deslocar, e ir ao estado 48
    T_MAIS   deslocar, e ir ao estado 49
    T_MENOS  deslocar, e ir ao estado 50
    T_MAIOR  deslocar, e ir ao estado 51
    T_MENOR  deslocar, e ir ao estado 52
    T_IGUAL  deslocar, e ir ao estado 53
    T_E      deslocar, e ir ao estado 54
    T_OU     deslocar, e ir ao estado 55


Estado 42

    3 programa: cabecalho $@1 variaveis $@2 T_INICIO lista_comandos T_FIM •

    $padrão  reduzir usando a regra 3 (programa)


Estado 43

   14 lista_comandos: comando lista_comandos •

    $padrão  reduzir usando a regra 14 (lista_comandos)


Estado 44

   29 atribuicao: T_IDENTIF $@7 T_ATRIB • expressao

    T_IDENTIF  deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 33
    T_F        deslocar, e ir ao estado 34
    T_NUMERO   deslocar, e ir ao estado 35
    T_NAO      deslocar, e ir ao estado 36
    T_ABRE     deslocar, e ir ao estado 37

    expressao  ir ao estado 58
    termo      ir ao estado 39


Estado 45

   44 termo: T_NAO termo •

    $padrão  reduzir usando a regra 44 (termo)


Estado 46

   30 expressao: expressao • T_VEZES expressao
   31          | expressao • T_DIV expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MENOS expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao
   45 termo: T_ABRE expressao • T_FECHA

    T_VEZES  deslocar, e ir ao estado 47
    T_DIV    deslocar, e ir ao estado 48
    T_MAIS   deslocar, e ir ao estado 49
    T_MENOS  deslocar, e ir ao estado 50
    T_MAIOR  deslocar, e ir ao estado 51
    T_MENOR  deslocar, e ir ao estado 52
    T_IGUAL  deslocar, e ir ao estado 53
    T_E      deslocar, e ir ao estado 54
    T_OU     deslocar, e ir ao estado 55
    T_FECHA  deslocar, e ir ao estado 59


Estado 47

   30 expressao: expressao T_VEZES • expressao

    T_IDENTIF  deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 33
    T_F        deslocar, e ir ao estado 34
    T_NUMERO   deslocar, e ir ao estado 35
    T_NAO      deslocar, e ir ao estado 36
    T_ABRE     deslocar, e ir ao estado 37

    expressao  ir ao estado 60
    termo      ir ao estado 39


Estado 48

   31 expressao: expressao T_DIV • expressao

    T_IDENTIF  deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 33
    T_F        deslocar, e ir ao estado 34
    T_NUMERO   deslocar, e ir ao estado 35
    T_NAO      deslocar, e ir ao estado 36
    T_ABRE     deslocar, e ir ao estado 37

    expressao  ir ao estado 61
    termo      ir ao estado 39


Estado 49

   32 expressao: expressao T_MAIS • expressao

    T_IDENTIF  deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 33
    T_F        deslocar, e ir ao estado 34
    T_NUMERO   deslocar, e ir ao estado 35
    T_NAO      deslocar, e ir ao estado 36
    T_ABRE     deslocar, e ir ao estado 37

    expressao  ir ao estado 62
    termo      ir ao estado 39


Estado 50

   33 expressao: expressao T_MENOS • expressao

    T_IDENTIF  deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 33
    T_F        deslocar, e ir ao estado 34
    T_NUMERO   deslocar, e ir ao estado 35
    T_NAO      deslocar, e ir ao estado 36
    T_ABRE     deslocar, e ir ao estado 37

    expressao  ir ao estado 63
    termo      ir ao estado 39


Estado 51

   34 expressao: expressao T_MAIOR • expressao

    T_IDENTIF  deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 33
    T_F        deslocar, e ir ao estado 34
    T_NUMERO   deslocar, e ir ao estado 35
    T_NAO      deslocar, e ir ao estado 36
    T_ABRE     deslocar, e ir ao estado 37

    expressao  ir ao estado 64
    termo      ir ao estado 39


Estado 52

   35 expressao: expressao T_MENOR • expressao

    T_IDENTIF  deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 33
    T_F        deslocar, e ir ao estado 34
    T_NUMERO   deslocar, e ir ao estado 35
    T_NAO      deslocar, e ir ao estado 36
    T_ABRE     deslocar, e ir ao estado 37

    expressao  ir ao estado 65
    termo      ir ao estado 39


Estado 53

   36 expressao: expressao T_IGUAL • expressao

    T_IDENTIF  deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 33
    T_F        deslocar, e ir ao estado 34
    T_NUMERO   deslocar, e ir ao estado 35
    T_NAO      deslocar, e ir ao estado 36
    T_ABRE     deslocar, e ir ao estado 37

    expressao  ir ao estado 66
    termo      ir ao estado 39


Estado 54

   37 expressao: expressao T_E • expressao

    T_IDENTIF  deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 33
    T_F        deslocar, e ir ao estado 34
    T_NUMERO   deslocar, e ir ao estado 35
    T_NAO      deslocar, e ir ao estado 36
    T_ABRE     deslocar, e ir ao estado 37

    expressao  ir ao estado 67
    termo      ir ao estado 39


Estado 55

   38 expressao: expressao T_OU • expressao

    T_IDENTIF  deslocar, e ir ao estado 32
    T_V        deslocar, e ir ao estado 33
    T_F        deslocar, e ir ao estado 34
    T_NUMERO   deslocar, e ir ao estado 35
    T_NAO      deslocar, e ir ao estado 36
    T_ABRE     deslocar, e ir ao estado 37

    expressao  ir ao estado 68
    termo      ir ao estado 39


Estado 56

   24 repeticao: T_ENQTO $@3 expressao • T_FACA $@4 lista_comandos T_FIMENQTO
   30 expressao: expressao • T_VEZES expressao
   31          | expressao • T_DIV expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MENOS expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao

    T_FACA   deslocar, e ir ao estado 69
    T_VEZES  deslocar, e ir ao estado 47
    T_DIV    deslocar, e ir ao estado 48
    T_MAIS   deslocar, e ir ao estado 49
    T_MENOS  deslocar, e ir ao estado 50
    T_MAIOR  deslocar, e ir ao estado 51
    T_MENOR  deslocar, e ir ao estado 52
    T_IGUAL  deslocar, e ir ao estado 53
    T_E      deslocar, e ir ao estado 54
    T_OU     deslocar, e ir ao estado 55


Estado 57

   27 selecao: T_SE expressao T_ENTAO • $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE

    $padrão  reduzir usando a regra 25 ($@5)

    $@5  ir ao estado 70


Estado 58

   29 atribuicao: T_IDENTIF $@7 T_ATRIB expressao •
   30 expressao: expressao • T_VEZES expressao
   31          | expressao • T_DIV expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MENOS expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao

    T_VEZES  deslocar, e ir ao estado 47
    T_DIV    deslocar, e ir ao estado 48
    T_MAIS   deslocar, e ir ao estado 49
    T_MENOS  deslocar, e ir ao estado 50
    T_MAIOR  deslocar, e ir ao estado 51
    T_MENOR  deslocar, e ir ao estado 52
    T_IGUAL  deslocar, e ir ao estado 53
    T_E      deslocar, e ir ao estado 54
    T_OU     deslocar, e ir ao estado 55

    $padrão  reduzir usando a regra 29 (atribuicao)


Estado 59

   45 termo: T_ABRE expressao T_FECHA •

    $padrão  reduzir usando a regra 45 (termo)


Estado 60

   30 expressao: expressao • T_VEZES expressao
   30          | expressao T_VEZES expressao •
   31          | expressao • T_DIV expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MENOS expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao

    $padrão  reduzir usando a regra 30 (expressao)


Estado 61

   30 expressao: expressao • T_VEZES expressao
   31          | expressao • T_DIV expressao
   31          | expressao T_DIV expressao •
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MENOS expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao

    $padrão  reduzir usando a regra 31 (expressao)


Estado 62

   30 expressao: expressao • T_VEZES expressao
   31          | expressao • T_DIV expressao
   32          | expressao • T_MAIS expressao
   32          | expressao T_MAIS expressao •
   33          | expressao • T_MENOS expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao

    T_VEZES  deslocar, e ir ao estado 47
    T_DIV    deslocar, e ir ao estado 48

    $padrão  reduzir usando a regra 32 (expressao)


Estado 63

   30 expressao: expressao • T_VEZES expressao
   31          | expressao • T_DIV expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MENOS expressao
   33          | expressao T_MENOS expressao •
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao

    T_VEZES  deslocar, e ir ao estado 47
    T_DIV    deslocar, e ir ao estado 48

    $padrão  reduzir usando a regra 33 (expressao)


Estado 64

   30 expressao: expressao • T_VEZES expressao
   31          | expressao • T_DIV expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MENOS expressao
   34          | expressao • T_MAIOR expressao
   34          | expressao T_MAIOR expressao •
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao

    T_VEZES  deslocar, e ir ao estado 47
    T_DIV    deslocar, e ir ao estado 48
    T_MAIS   deslocar, e ir ao estado 49
    T_MENOS  deslocar, e ir ao estado 50

    $padrão  reduzir usando a regra 34 (expressao)


Estado 65

   30 expressao: expressao • T_VEZES expressao
   31          | expressao • T_DIV expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MENOS expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   35          | expressao T_MENOR expressao •
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao

    T_VEZES  deslocar, e ir ao estado 47
    T_DIV    deslocar, e ir ao estado 48
    T_MAIS   deslocar, e ir ao estado 49
    T_MENOS  deslocar, e ir ao estado 50

    $padrão  reduzir usando a regra 35 (expressao)


Estado 66

   30 expressao: expressao • T_VEZES expressao
   31          | expressao • T_DIV expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MENOS expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   36          | expressao T_IGUAL expressao •
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao

    T_VEZES  deslocar, e ir ao estado 47
    T_DIV    deslocar, e ir ao estado 48
    T_MAIS   deslocar, e ir ao estado 49
    T_MENOS  deslocar, e ir ao estado 50
    T_MAIOR  deslocar, e ir ao estado 51
    T_MENOR  deslocar, e ir ao estado 52

    $padrão  reduzir usando a regra 36 (expressao)


Estado 67

   30 expressao: expressao • T_VEZES expressao
   31          | expressao • T_DIV expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MENOS expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   37          | expressao T_E expressao •
   38          | expressao • T_OU expressao

    T_VEZES  deslocar, e ir ao estado 47
    T_DIV    deslocar, e ir ao estado 48
    T_MAIS   deslocar, e ir ao estado 49
    T_MENOS  deslocar, e ir ao estado 50
    T_MAIOR  deslocar, e ir ao estado 51
    T_MENOR  deslocar, e ir ao estado 52
    T_IGUAL  deslocar, e ir ao estado 53

    $padrão  reduzir usando a regra 37 (expressao)


Estado 68

   30 expressao: expressao • T_VEZES expressao
   31          | expressao • T_DIV expressao
   32          | expressao • T_MAIS expressao
   33          | expressao • T_MENOS expressao
   34          | expressao • T_MAIOR expressao
   35          | expressao • T_MENOR expressao
   36          | expressao • T_IGUAL expressao
   37          | expressao • T_E expressao
   38          | expressao • T_OU expressao
   38          | expressao T_OU expressao •

    T_VEZES  deslocar, e ir ao estado 47
    T_DIV    deslocar, e ir ao estado 48
    T_MAIS   deslocar, e ir ao estado 49
    T_MENOS  deslocar, e ir ao estado 50
    T_MAIOR  deslocar, e ir ao estado 51
    T_MENOR  deslocar, e ir ao estado 52
    T_IGUAL  deslocar, e ir ao estado 53

    $padrão  reduzir usando a regra 38 (expressao)


Estado 69

   24 repeticao: T_ENQTO $@3 expressao T_FACA • $@4 lista_comandos T_FIMENQTO

    $padrão  reduzir usando a regra 23 ($@4)

    $@4  ir ao estado 71


Estado 70

   27 selecao: T_SE expressao T_ENTAO $@5 • lista_comandos T_SENAO $@6 lista_comandos T_FIMSE

    T_IDENTIF  deslocar, e ir ao estado 18
    T_LEIA     deslocar, e ir ao estado 19
    T_ESCREVA  deslocar, e ir ao estado 20
    T_ENQTO    deslocar, e ir ao estado 21
    T_SE       deslocar, e ir ao estado 22

    $padrão  reduzir usando a regra 13 (lista_comandos)

    lista_comandos  ir ao estado 72
    comando         ir ao estado 24
    leitura         ir ao estado 25
    escrita         ir ao estado 26
    repeticao       ir ao estado 27
    selecao         ir ao estado 28
    atribuicao      ir ao estado 29


Estado 71

   24 repeticao: T_ENQTO $@3 expressao T_FACA $@4 • lista_comandos T_FIMENQTO

    T_IDENTIF  deslocar, e ir ao estado 18
    T_LEIA     deslocar, e ir ao estado 19
    T_ESCREVA  deslocar, e ir ao estado 20
    T_ENQTO    deslocar, e ir ao estado 21
    T_SE       deslocar, e ir ao estado 22

    $padrão  reduzir usando a regra 13 (lista_comandos)

    lista_comandos  ir ao estado 73
    comando         ir ao estado 24
    leitura         ir ao estado 25
    escrita         ir ao estado 26
    repeticao       ir ao estado 27
    selecao         ir ao estado 28
    atribuicao      ir ao estado 29


Estado 72

   27 selecao: T_SE expressao T_ENTAO $@5 lista_comandos • T_SENAO $@6 lista_comandos T_FIMSE

    T_SENAO  deslocar, e ir ao estado 74


Estado 73

   24 repeticao: T_ENQTO $@3 expressao T_FACA $@4 lista_comandos • T_FIMENQTO

    T_FIMENQTO  deslocar, e ir ao estado 75


Estado 74

   27 selecao: T_SE expressao T_ENTAO $@5 lista_comandos T_SENAO • $@6 lista_comandos T_FIMSE

    $padrão  reduzir usando a regra 26 ($@6)

    $@6  ir ao estado 76


Estado 75

   24 repeticao: T_ENQTO $@3 expressao T_FACA $@4 lista_comandos T_FIMENQTO •

    $padrão  reduzir usando a regra 24 (repeticao)


Estado 76

   27 selecao: T_SE expressao T_ENTAO $@5 lista_comandos T_SENAO $@6 • lista_comandos T_FIMSE

    T_IDENTIF  deslocar, e ir ao estado 18
    T_LEIA     deslocar, e ir ao estado 19
    T_ESCREVA  deslocar, e ir ao estado 20
    T_ENQTO    deslocar, e ir ao estado 21
    T_SE       deslocar, e ir ao estado 22

    $padrão  reduzir usando a regra 13 (lista_comandos)

    lista_comandos  ir ao estado 77
    comando         ir ao estado 24
    leitura         ir ao estado 25
    escrita         ir ao estado 26
    repeticao       ir ao estado 27
    selecao         ir ao estado 28
    atribuicao      ir ao estado 29


Estado 77

   27 selecao: T_SE expressao T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos • T_FIMSE

    T_FIMSE  deslocar, e ir ao estado 78


Estado 78

   27 selecao: T_SE expressao T_ENTAO $@5 lista_comandos T_SENAO $@6 lista_comandos T_FIMSE •

    $padrão  reduzir usando a regra 27 (selecao)
